feat: 迁移至JDK 21 + Spring Boot 3.4.2 + SQLite
完整重写后端架构：
- 升级JDK 21，使用record、var、switch表达式、文本块、虚拟线程等新特性
- Spring Boot 3.4.2分层架构：config / entity / repository / service / web
- SQLite + Spring Data JPA替代JSON文件存储会话
- Spring WebSocket替代自定义WebSocketServer
- REST API管理会话（CRUD）
- 配置集中到application.yml，API Key直接写入配置文件
- 删除旧文件：ClaudeCode.java、SessionManager.java、Settings.java、JsonParse.java、ChatWebSocketServer.java、ClaudeCodeWeb.java