@@ -1,6 +1,5 @@
 package com.claude.code.mcp;
 
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
@@ -8,9 +7,7 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
@@ -28,52 +25,38 @@ public class McpStdioTransport {
     private Process process;
     private BufferedWriter writer;
     private final AtomicInteger requestId = new AtomicInteger(0);
-    private final ConcurrentHashMap<Integer, AtomicReference<String>> pendingResponses = new ConcurrentHashMap<Integer, AtomicReference<String>>();
-    private final ConcurrentHashMap<Integer, CountDownLatch> pendingLatches = new ConcurrentHashMap<Integer, CountDownLatch>();
+    private final ConcurrentHashMap<Integer, AtomicReference<String>> pendingResponses = new ConcurrentHashMap<>();
+    private final ConcurrentHashMap<Integer, CountDownLatch> pendingLatches = new ConcurrentHashMap<>();
     private volatile boolean running;
-    private Thread readerThread;
 
     public McpStdioTransport(McpServerConfig config) {
         this.config = config;
     }
 
     public void connect() throws IOException {
-        ProcessBuilder pb = new ProcessBuilder();
+        var pb = new ProcessBuilder();
         pb.command().add(config.getCommand());
-        if (config.getArgs() != null && config.getArgs().length > 0) {
-            for (String arg : config.getArgs()) {
+        if (config.getArgs() != null) {
+            for (var arg : config.getArgs()) {
                 pb.command().add(arg);
             }
         }
 
         if (config.getEnv() != null) {
             Map<String, String> env = pb.environment();
-            for (Map.Entry<String, String> entry : config.getEnv().entrySet()) {
-                env.put(entry.getKey(), entry.getValue());
-            }
+            env.putAll(config.getEnv());
         }
 
         pb.redirectErrorStream(false);
         process = pb.start();
-
         writer = new BufferedWriter(new OutputStreamWriter(process.getOutputStream(), StandardCharsets.UTF_8));
-
         running = true;
 
-        // Start reader thread
-        readerThread = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                readLoop();
-            }
-        }, "mcp-reader-" + config.getName());
-        readerThread.setDaemon(true);
-        readerThread.start();
+        Thread.startVirtualThread(this::readLoop);
     }
 
     private void readLoop() {
-        try {
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8));
+        try (var reader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
             String line;
             while (running && (line = reader.readLine()) != null) {
                 line = line.trim();
@@ -84,18 +67,12 @@ public class McpStdioTransport {
                     JsonNode idNode = node.get("id");
                     if (idNode != null && idNode.isInt()) {
                         int id = idNode.asInt();
-                        AtomicReference<String> ref = pendingResponses.get(id);
-                        CountDownLatch latch = pendingLatches.get(id);
-                        if (ref != null) {
-                            ref.set(line);
-                        }
-                        if (latch != null) {
-                            latch.countDown();
-                        }
+                        var ref = pendingResponses.get(id);
+                        var latch = pendingLatches.get(id);
+                        if (ref != null) ref.set(line);
+                        if (latch != null) latch.countDown();
                     }
-                    // Notifications and other messages are silently consumed
                 } catch (Exception e) {
-                    // Skip malformed JSON lines
                     System.err.println("MCP [" + config.getName() + "] parse error: " + e.getMessage());
                 }
             }
@@ -110,13 +87,12 @@ public class McpStdioTransport {
 
     public String sendRequest(String method, Map<String, Object> params) throws IOException {
         int id = requestId.incrementAndGet();
-        AtomicReference<String> responseRef = new AtomicReference<String>();
-        CountDownLatch latch = new CountDownLatch(1);
+        var responseRef = new AtomicReference<String>();
+        var latch = new CountDownLatch(1);
         pendingResponses.put(id, responseRef);
         pendingLatches.put(id, latch);
 
         try {
-            // Build JSON-RPC request
             ObjectNode request = MAPPER.createObjectNode();
             request.put("jsonrpc", "2.0");
             request.put("id", id);
@@ -132,14 +108,7 @@ public class McpStdioTransport {
                 writer.flush();
             }
 
-            // Wait for response
-            boolean received = false;
-            try {
-                received = latch.await(RESPONSE_TIMEOUT_MS, TimeUnit.MILLISECONDS);
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-                throw new IOException("MCP request interrupted: " + method + " to " + config.getName(), e);
-            }
+            boolean received = latch.await(RESPONSE_TIMEOUT_MS, TimeUnit.MILLISECONDS);
             if (!received) {
                 throw new IOException("MCP request timeout: " + method + " to " + config.getName());
             }
@@ -149,7 +118,6 @@ public class McpStdioTransport {
                 throw new IOException("MCP request failed: no response for " + method);
             }
 
-            // Check for error
             JsonNode responseNode = MAPPER.readTree(response);
             JsonNode errorNode = responseNode.get("error");
             if (errorNode != null) {
@@ -158,6 +126,9 @@ public class McpStdioTransport {
             }
 
             return response;
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new IOException("MCP request interrupted: " + method + " to " + config.getName(), e);
         } finally {
             pendingResponses.remove(id);
             pendingLatches.remove(id);
@@ -183,12 +154,8 @@ public class McpStdioTransport {
     public void close() {
         running = false;
         try {
-            if (writer != null) {
-                writer.close();
-            }
-        } catch (IOException e) {
-            // ignore
-        }
+            if (writer != null) writer.close();
+        } catch (IOException ignored) {}
         if (process != null) {
             process.destroy();
             try {
@@ -196,9 +163,7 @@ public class McpStdioTransport {
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
             }
-            if (process.isAlive()) {
-                process.destroyForcibly();
-            }
+            if (process.isAlive()) process.destroyForcibly();
         }
     }
 }
